# SLAMbook2_learning

./: README.md
ch5/imageBasics/: CMakeLists.txt  imageBasics.cpp  test.cpp
ch5/rgbd/: CMakeLists.txt  joinMap.cpp  test.cpp
ch6/: CMakeLists.txt  ceresCurveFitting.cpp  g2oCurveFitting.cpp  gaussNewton.cpp  gaussnewton_PRC.cpp
ch6/build_ceres/: CMakeCache.txt  Makefile  cmake_install.cmake
ch6/build_g2o/: CMakeCache.txt  Makefile  cmake_install.cmake  g2oCurveFitting
ch7/: CMakeLists.txt  orb_cv.cpp  orb_self.cpp  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp
ch7/build_2d2d/: CMakeCache.txt  Makefile  cmake_install.cmake  pose_estimation_2d2d
ch7/build_orb_cv_RGB/: CMakeCache.txt  Makefile  cmake_install.cmake  orb_cv
ch7/build_orb_self_RGB/: CMakeCache.txt  Makefile  cmake_install.cmake  orb_self
examples/: CMakeLists.txt  plotTrajectory.cpp  text.cpp
